tests/fixtures/invalid/pow_str_dict_list.py
# Cannot call pow() with Str, Dict[str, int], List[int]
x = pow("hello", {"a": 1}, [1, 2, 3])
